# BME-Putaway

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
Docs/: Putaway-Bme-Transaction.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/src/: constants.rs  main.rs
backend/src/database/: bulk_runs.rs  mod.rs  putaway_db.rs  putaway_db_snippet.rs
backend/src/handlers/: bulk_runs.rs  mod.rs  putaway.rs
backend/src/models/: api_errors.rs  api_response.rs  bulk_runs.rs  inventory.rs  mod.rs  putaway.rs  putaway_models.rs
backend/src/services/: bulk_runs_service.rs  mod.rs  putaway_service.rs
backend/src/utils/: auth.rs  mod.rs  timezone.rs  user_management.rs
frontend/: .dockerignore  Dockerfile  angular.json  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  manifest.json
frontend/src/app/: app.routes.ts
frontend/src/app/components/bin-selection-modal/: bin-selection-modal.component.ts
frontend/src/app/components/dashboard/: dashboard.component.html  (+1 more)
frontend/src/app/services/: putaway.service.ts
frontend/src/assets/: config.js
frontend/src/environments/: environment.prod.ts  environment.ts  load-env.js
ψ/inbox/handoff/: 2026-02-16_07-45_bme-putaway-analysis.md  2026-02-16_09-09_remove-dashboard-redirect-putaway.md
ψ/memory/learnings/: 2026-02-16_bme-putaway-transaction-patterns.md  2026-02-16_csp-docker-internal-networks.md  2026-02-16_logout-button-visual-hierarchy.md  2026-02-16_verify-dont-guess.md
ψ/memory/resonance/: project.md
(+9 files in other folders)
